# PixGL

./: .gitignore  CMakeLists.txt  README.md
include/glad/: glad.h
src/: constants.h  glad.c  main.cpp  shader.cpp  shader.h  structs.h
src/old/: main.cpp  old_main.cpp
src/shaders/: shader.fs
